# TRADAgent

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  tradagent.db
antigrav/: CONSIGNES.md
docs/: ARCHITECTURE_IMPROVEMENTS.md  ERROR_RESOLUTION_GUIDE.md
src/: main.py
src/finance_agent/: agent.py  config.py  main.py  tools.py
src/finance_agent/agents/: stock_analyst.py
src/finance_agent/agents/tools/: stock_analyst_tools.py
src/tools/: stock_analyst_tools.py
src/tradagent/: __init__.py  agent.py  cli.py  config.py  models.py
src/tradagent/analytics/: features.py
src/tradagent/llm/: mistral_client.py
src/tradagent/market/: yahoo.py
src/tradagent/memory/: sqlite.py
src/utils/: answer_utils.py
tradagent/: config.py  tools.py
tradagent/agents/: news_analyst_agent.py  orchestrator_agent.py  report_writer_agent.py  stock_analyst.py  stock_analyst_agent.py
tradagent/test/: natural_gas_daily_clean.csv  test_notebook.ipynb
tradagent/test/data/news/macro/: news_blockchain.json  news_energy_transportation.json
tradagent/test/data/news/macro_monetary/: 2026-01-13.json
tradagent/tools/: report_writer_tools.py  stock_analyst_tools.py
tradagent/utils/: stock_utils.py
