[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradagent"
license = { file = "LICENSE" }
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "finnhub-python>=2.4.26",
    "langchain>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "lxml[html-clean]>=6.0.2",
    "mistralai>=1.10.0",
    "newspaper3k>=0.2.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "wikipedia>=1.4.0",
    "yfinance>=1.0",
]

[tool.setuptools.packages.find]
where = ["tradagent"]
